don't add extra padding bottom if mobile - no url bar issue

--- a/htdocs/showcase/revcontent-api-showcase-shifter-2.0/css/revshifter.css
+++ b/htdocs/showcase/revcontent-api-showcase-shifter-2.0/css/revshifter.css
@@ -36,6 +36,10 @@ body.rev-shifter-no-transform #rev-shifter.rev-shifter {
     padding-bottom: 15px;
 }
 
+#rev-shifter.rev-shifter.rev-mobile.bottom {
+    padding-bottom: 0;
+}
+
 #rev-shifter.rev-shifter .rev-foot {
     position: absolute;
     right: 10px;
